# speedometer_project

./: README.md
av23-team-c/: CMakeLists.txt  README.md
av23-team-c/desktop/client/: main.cpp
av23-team-c/desktop/client/include/: canvas.h  comservice.h  tcpservice.h  uartservice.h  window.h
av23-team-c/desktop/client/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
av23-team-c/desktop/server/: main.cpp
av23-team-c/desktop/server/include/: comservice.h  tcpservice.h  uartservice.h  window.h
av23-team-c/desktop/server/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
av23-team-c/esp32/client/src/: main.cpp
av23-team-c/esp32/server/src/: main.cpp
av23-team-c/shared/: setting.h
